src/test/deca/context/invalid/class/invalid_double_var_declaration.deca
// Description:
//    Test of a double declaration variable (of the same type) in the same method
//    Test rule 3.17
//
// Result:
// [Begin Result]
//invalid_double_var_declaration.deca:17:12: a is already defined. Rule 3.17.
// [End Result]
//
// History:
//    created on 12/01/2025


class MyClass {
    int myMethod(){
        int a;
        int a = 1;
        return 1;
    }
}

{
    //empty main
}
